# simple-avr-bootloader

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  toolchain.cmake
.github/workflows/: build.yml  main.yml
blinky/: CMakeLists.txt  main.c
blinky/src/: main.c
blinky_test/: Makefile
bootloader/: CMakeLists.txt  Makefile
bootloader/src/: main.c
bootloader_hardcode/src/: main.c
bootloader_hardcoded/: CMakeLists.txt  main.c
bootloader_hardcoded/src/: main.c
bootloader_uart/: Makefile
bootloader_uart/src/: main.c
final/: CMakeLists.txt  boot_sync.h
final/bootloader/: main.c
final/fw_update_script/: demo_sup.py  main.py  sup.py
final/user_app/: main.c
firmware/: CMakeLists.txt  boot_sync.h
firmware-upload-tool/: main.py
firmware/bootloader/: main.c
firmware/user-app/: main.c
first-steps/1-blinky/: CMakeLists.txt  main.c
first-steps/2-hardcoded-bootloader/: main.c
first-steps/3-simple-uart-protocol/mcu/: CMakeLists.txt  main.c  sup.c  sup.h
first-steps/3-simple-uart-protocol/pc/: main.py
simple_uart_protocol/: CMakeLists.txt  demo.py  main.c  sup.c  sup.h
simple_uart_protocol/src/: main.c  sup.c  sup.h
src/: main.c
src/my/: project_config.h
uart_protocol/: Makefile
uart_protocol/src/: main.c
uploader/: main.py
